# walk-machine

./: Cargo.toml  twojastara.py
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main.rs
