[package]
name = "walk-machine"
version = "0.1.0"
authors = ["piotrbalion <piotrbalion99@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "z"

[dependencies]
hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32"] }
esp-wifi  = { version = "0.1.1", features = ["esp32", "ble"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "0db8fcb", features = ["macros"] }

[patch.crates-io]
esp-hal-common = { git = "https://github.com/kamirr/esp-hal", branch = "kek/esp-hal-common-0.13.1-mac-patch" }


